syntax = "proto3";
import "system.proto";

package PB;
option java_package = "com.flipperdevices.protobuf";

enum CommandStatus {
    OK = 0;

    /**< Common Errors */
    ERROR = 1; /**< Unknown error */
    ERROR_DECODE = 2; /**< Command can't be decoded successfully - command_id in response may be wrong! */
    ERROR_NOT_IMPLEMENTED = 3; /**< Command succesfully decoded, but not implemented (deprecated or not yet implemented) */
    ERROR_BUSY = 4; /**< Somebody took global lock, so not all commands are available */
    ERROR_CONTINUOUS_COMMAND_INTERRUPTED = 14; /**< Not received has_next == 0 */
    ERROR_INVALID_PARAMETERS = 15; /**< not provided (or provided invalid) crucial parameters to perform rpc */
}

/* There are Server commands (e.g. Storage_write), which have no body message
 * in response. But 'oneof' obligate to have at least 1 encoded message
 * in scope. For this needs Empty message is implemented.
 */
message Empty {
}

message StopSession {
}

message Main {
    uint32 command_id = 1;
    CommandStatus command_status = 2;
    bool has_next = 3;
    oneof content {
        Empty empty = 4;
        StopSession stop_session = 19;
        .PB_System.PingRequest system_ping_request = 5;
        .PB_System.PingResponse system_ping_response = 6;
        .PB_System.DeviceInfoRequest system_device_info_request = 32;
        .PB_System.DeviceInfoResponse system_device_info_response = 33;
    }
}